grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - args:
        - GF_SECURITY_ADMIN_PASSWORD=secret
        image: grafana/grafana:6.1.3
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: default
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'

spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30003
