ingress-prom.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prom.sysadm.kz
    http:
      paths:
        - backend:
            serviceName: prometheus-service
            servicePort: 9090
